--- a/package.json
+++ b/package.json
@@ -8,7 +8,7 @@
     "build": "vite build",
     "preview": "vite preview",
     "lint": "eslint --fix .",
-    "test": "vitest"
+    "test": "vitest run"
   },
   "devDependencies": {
     "@stylistic/eslint-plugin-js": "^2.4.0",
